--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,4 +34,8 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
+      
+    - name: Run
+      working-directory: ${{github.workspace}}/build
+      run: make && ./Test
 
